# anubis

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile  Dockerfile  README.md  make.ps1  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: container-build-push.yaml  dependency-review.yaml  dependency-review.yml  docker-build-push.yaml  docker.yml  github-pages-python-sphinx.yaml  precommit-autoupdate.yaml  python-ci.yaml  sentry-release.yaml  sentry-release.yml
alembic/: env.py
alembic/versions/: 14dcb08ebf2e_initial_revision.py  71351d888a26_initial_autogenerate.py
docs/source/: changelog.rst  conf.py  environment_variables.rst  index.rst
requirements/: requirements-dev.in  requirements-dev.pip  requirements-dev.txt  requirements-docs.in  requirements-docs.pip  requirements-docs.txt  requirements-tests.in  requirements-tests.pip  requirements-tests.txt  requirements.in  requirements.pip  requirements.txt
src/bot/: __init__.py  __main__.py  bot.py  constants.py  log.py
src/bot/database/: __init__.py  models.py
src/bot/exts/: __init__.py
src/bot/exts/core/: __init__.py  cog.py  error_handler.py  log.py  logging.py  ping.py  todo.py
src/bot/exts/core/internal_eval/: _helpers.py  _internal_eval.py
src/bot/exts/filters/: __init__.py  webhook_remover.py
src/bot/exts/fun/: __init__.py  dice.py  typeracer.py  uwu.py
src/bot/exts/info/: __init__.py  code_snippets.py  github.py
src/bot/exts/utilities/: __init__.py  github.py  internal.py  reminder.py
src/bot/exts/utilities/snekbox/: __init__.py  _cog.py  _eval.py  _io.py
src/bot/orm/: __init__.py  models.py
src/bot/utils/: __init__.py  commands.py  decorators.py  exceptions.py  extensions.py  function.py  guild_data.py  helpers.py  lock.py  messages.py  services.py
tests/: test_smoke.py
